[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-laplacian-coordination-filter"
version = "0.1.0"
description = "Adaptive Laplacian Coordination Filter for safe cooperative multi-agent control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Dongzhe Zheng", email = "dongzhe.zheng@princeton.edu"}
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
include = ["alcf*"]
